--- a/DesignerRHN/DesignerRHN-war/web/busquedaavanzada.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/busquedaavanzada.xhtml
@@ -1201,8 +1201,8 @@
                                     <legend style="font-size: 12px; color: blue"><strong>#{msg['resultadoBusqueda']}</strong></legend>
                                             
                                     <p:dataTable id="resultadoBusquedaAvanzada" widgetVar="resultadoBusquedaAvanzada" var="busqueda" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 715px;position: relative"
-                                                 value="#{controlBusquedaAvanzada.listaColumnasBusquedaAvanzada}" scrollable="true" scrollWidth="733" scrollHeight="70"
-                                                 liveScroll="true" scrollRows="4" filteredValue="#{controlBusquedaAvanzada.filteredListaColumnasBusquedaAvanzada}" emptyMessage="#{msg['vacio']}"
+                                                 value="#{controlBusquedaAvanzada.registros}" scrollable="true" scrollWidth="733" scrollHeight="70"
+                                                 liveScroll="true" scrollRows="4" filteredValue="#{controlBusquedaAvanzada.registrosFiltrado}" emptyMessage="#{msg['vacio']}"
                                                  editable="true" editMode="cell">
                                         
                                    <p:columns value="#{controlBusquedaAvanzada.columns}" var="column" width="120" columnIndexVar="colIndex" 
